test/src/e2e_vm_tests/test_programs/should_fail/numerics_u8_overflow/src/main.sw
script;

fn main() {
 let mut a0 = 255; //2^8-1
 let _x0: u8 = a0;

 let mut a1 = 256; //2^8
 let _x1: u8 = a1;
}